--- a/src/main/resources/application-dockerdev.yaml
+++ b/src/main/resources/application-dockerdev.yaml
@@ -2,11 +2,19 @@ spring:
   jpa: 
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
-    open-in-view: false
+    generate-ddl: false
+    open-in-view: true
   datasource:
     url: jdbc:postgresql://db:5432/example
     username: example
     password: P@55w0rd
     driver-class-name: org.postgresql.Driver
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    locations:
+    - classpath:db/migration
+    - filesystem:/opt/migration
+    table: his_db_migration
